--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,54 @@
+# Node.js
+node_modules/
+
 # Logs
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Dependency directories
+jspm_packages/
+
+# Build directories
+/dist
+/build
+/.next
+
+# VS Code settings
+.vscode/
+
+# Mac system files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Windows system files
+Thumbs.db
+
+# Temporary files
+*.swp
+*.swo
+*.bak
+*.tmp
+
+# Coverage directory used by testing tools
+coverage/
+
+# Debug directory for debugging files
+debug/
+*.core
+
+# IDE settings
+.idea/
+
+# Yarn lock file (if using yarn instead of npm)
+yarn-error.log
+yarn.lock
+
+# Logs for the application
+logs/
